# pack

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
docs/: TZ.md  compress_example.md  implementation-audit.md  magic_example1.md  meta.md  metaquailty.md  review-claude.md  test-contract-matrix.md
docs/conversations/: claude.md  gemini-conversation-2026-06-12-20-22-05.md  gemini-conversation-2026-06-13-16-27-51.md  gemini-conversation-2026-06-13-18-59-07.md  gemini-conversation-selection-2026-06-13-17-59-38.md  gemini-conversation-selection-2026-06-13-19-28-15.md  gemini-conversation-selection-2026-06-13-19-39-22.md  gemini-conversation-selection-2026-06-14-05-17-20.md  generator.md  generator2.md  generator3.md  zip.md
reviews/: claude-11.md  claude-4.md  claude-5.md  claude-6.md  claude-7.md  claude0.md  claude10.md  claude8.md  gemini-4.md  gemini-5.md  gemini-conversation-selection-2026-06-13-02-15-17.md  gemini-conversation-selection-2026-06-14-03-08-00.md  gemini-plan-review.md  gpt.md  review-claude.md  review-claude2.md  review-claude3.md  review-gemini.md  review.md  rewiew-gemini-2.md
src/: main.rs
src/adapters/: cli.rs
src/application/: service.rs
src/domain/: bench.rs  bitstream.rs  branch.rs  codec.rs  codec_tests.rs  decoder.rs  encoder.rs  fwht.rs  keygen.rs  metagenerator.rs  mod.rs  model.rs  operator.rs  window.rs
tests/: bench_test_files.rs  test-contract-matrix.md  test0  test1.txt  test2.txt  test3  test4  test5.md
tests/noise/: noise_01.txt  noise_02.txt  noise_03.txt  noise_04.txt  noise_05.txt  noise_06.txt  (+9 more)
(+9 files in other folders)
