[package]
name = "pack"
version = "0.1.0"
edition = "2021"
rust-version = "1.73"
description = "Research lossless codec with topology-compiled executable keys"
readme = "README.md"
publish = false

[lib]
name = "pack"
path = "src/lib.rs"

[[bin]]
name = "pack"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
